# linux-rs

./: Cargo.toml
macros/: Cargo.toml
macros/src/: kstr.rs  lib.rs  pod.rs
src/: fd.rs  kty.rs  lib.rs  lmem.rs  lock.rs  macros.rs  parse.rs  result.rs  string.rs  syscall.rs  time.rs  util.rs
src/fd/: flags.rs
src/kty/: gen.rs  x86_64.rs
src/kty/x86_64/: x64.rs
src/lock/: lock.rs
src/string/: byte_str.rs  c_str.rs  cmp.rs  conv.rs  no_null_str.rs  util.rs
src/string/byte_str/: index.rs
src/string/c_str/: index.rs
src/string/no_null_str/: index.rs
src/syscall/: raw.rs  tests.rs
src/syscall/raw/: common.rs  x86_64.rs
src/syscall/raw/x86_64/: x64.rs
src/time/: clock.rs  timer.rs  tz.rs
src/util/: data.rs  error.rs  int.rs  io.rs  kstr.rs  pod.rs  retry.rs  saturating.rs
